--- a/server/package.json
+++ b/server/package.json
@@ -20,13 +20,17 @@
     "jshint": "^2.13.4",
     "mongoose": "^6.3.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "uuid": "^8.3.2",
     "winston": "^3.7.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.13.0",
