--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -14,7 +14,7 @@ jobs:
         working-directory: ./server
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x ]
+        node-version: [14.x, 16.x ]
         mongodb-version: [4.2, 4.0]
 
     steps:
@@ -25,7 +25,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'yarn'
+        cache: 'npm'
         cache-dependency-path: ./server/package-lock.json
 
-    - run: yarn install
+    - run: npm install
