--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,115 +1,40 @@
-aiofiles==0.8.0
-aiohttp==3.8.1
-aiohttp-retry==2.4.6
-aiosignal==1.2.0
-aiostream==0.4.4
-anyio==3.3.4
-appdirs==1.4.4
-appnope==0.1.2
-argon2-cffi==21.1.0
-async-timeout==4.0.2
-attrs==21.2.0
-Babel==2.9.1
-backcall==0.2.0
-bcrypt==3.2.0
-bleach==4.1.0
-cattrs==1.10.0
+absl-py==1.0.0
+astunparse==1.6.3
+cachetools==5.0.0
 certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.7
-click==8.0.3
-coverage==6.2
-cryptography==36.0.0
-cycler==0.10.0
-debugpy==1.5.1
-decorator==5.1.0
-defusedxml==0.7.1
-entrypoints==0.3
-et-xmlfile==1.1.0
-fabric==2.6.0
-filetype==1.0.10
-Flask==2.0.2
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==1.0.0
-frozenlist==1.3.0
-gbif-dl==0.1.0
-geojson-rewind==1.0.2
-geomet==0.3.0
-greenlet==1.1.2
+charset-normalizer==2.0.12
+flatbuffers==2.0
+gast==0.5.3
+google-auth==2.6.6
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.44.0
+h5py==3.6.0
 idna==3.3
-invoke==1.6.0
-ipykernel==6.4.2
-ipython==7.28.0
-ipython-genutils==0.2.0
-itsdangerous==2.0.1
-jedi==0.18.0
-Jinja2==3.0.2
-joblib==1.1.0
-json5==0.9.6
-jsonschema==4.1.1
-jupyter-client==7.0.6
-jupyter-core==4.8.1
-jupyter-server==1.11.1
-jupyterlab==3.2.0
-jupyterlab-pygments==0.1.2
-jupyterlab-server==2.8.2
-kiwisolver==1.3.2
-MarkupSafe==2.0.1
-mathlib==0.2.0
-matplotlib==3.4.3
-matplotlib-inline==0.1.3
-mistune==0.8.4
-multidict==6.0.2
-nbclassic==0.3.2
-nbclient==0.5.4
-nbconvert==6.2.0
-nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.4.5
-numpy==1.21.2
-openpyxl==3.0.9
-packaging==21.0
-pandas==1.3.4
-pandocfilters==1.5.0
-paramiko==2.8.0
-parso==0.8.2
-pathlib2==2.3.6
-pescador==2.1.0
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.4.0
-prometheus-client==0.11.0
-prompt-toolkit==3.0.20
-ptyprocess==0.7.0
-pybind11==2.9.1
-pycparser==2.20
-pygbif==0.6.0
-Pygments==2.10.0
-PyNaCl==1.4.0
-pyparsing==2.4.7
-PyPDF2==1.26.0
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-python-dwca-reader==0.15.0
-pytz==2021.3
-pyzmq==22.3.0
-requests==2.26.0
-requests-cache==0.9.3
-requests-unixsocket==0.2.0
-Send2Trash==1.8.0
+importlib-metadata==4.11.3
+keras==2.8.0
+Keras-Preprocessing==1.1.2
+libclang==14.0.1
+Markdown==3.3.6
+numpy==1.22.3
+oauthlib==3.2.0
+opt-einsum==3.3.0
+protobuf==3.20.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.8
 six==1.16.0
-sniffio==1.2.0
-SQLAlchemy==1.4.27
-terminado==0.12.1
-testpath==0.5.0
-tornado==6.1
-tqdm==4.64.0
-traitlets==5.1.0
-url-normalize==1.4.3
-urllib3==1.26.7
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==1.2.1
-Werkzeug==2.0.2
-WTForms==3.0.0
-yarl==1.7.2
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.8.0
+tensorflow-io-gcs-filesystem==0.25.0
+termcolor==1.1.0
+tf-estimator-nightly==2.8.0.dev2021122109
+typing_extensions==4.2.0
+urllib3==1.26.9
+Werkzeug==2.1.1
+wrapt==1.14.0
+zipp==3.8.0
