--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "express": "^4.17.3",
     "http-status-codes": "^2.2.0",
     "jshint": "^2.13.4",
-    "mongoose": "^6.3.0",
+    "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "uuid": "^8.3.2",
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
     "@types/supertest": "^2.0.12",
