--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/connect-mongodb-session": "^2.4.3",
+    "connect-mongo": "^4.6.0",
+    "connect-mongodb-session": "^3.1.1",
+    "connect-redis": "^6.1.3",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "http-status-codes": "^2.2.0",
     "jshint": "^2.13.4",
     "mongoose": "^6.3.1",
@@ -25,7 +30,10 @@
     "winston": "^3.7.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/connect-redis": "^0.0.18",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/jest": "^27.4.1",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
