--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "@types/connect-redis": "^0.0.18",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
+    "@types/faker": "^6.6.9",
     "@types/ioredis": "^4.28.10",
     "@types/jest": "^27.4.1",
     "@types/mongoose": "^5.11.97",
@@ -50,7 +51,10 @@
     "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
+    "faker": "^6.6.6",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^27.5.1",
+    "node-fetch": "^3.2.4",
     "nodemon": "^2.0.15",
     "onchange": "^7.1.0",
     "prettier": "^2.6.2",
