--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "start-server-and-test": "^1.14.0",
     "typescript": "~4.6.3",
     "vite": "^2.9.5",
+    "vite-svg-loader": "^3.3.0",
     "vitest": "^0.9.3",
     "vue-tsc": "^0.34.7"
   }
