--- a/server/package.json
+++ b/server/package.json
@@ -33,12 +33,12 @@
     "winston": "^3.7.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.3.1",
     "@types/bcrypt": "^5.0.0",
     "@types/connect-mongodb-session": "^2.4.3",
     "@types/connect-redis": "^0.0.18",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
-    "@types/faker": "^6.6.9",
     "@types/ioredis": "^4.28.10",
     "@types/jest": "^27.4.1",
     "@types/mongoose": "^5.11.97",
@@ -51,7 +51,6 @@
     "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
-    "faker": "^6.6.6",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "onchange": "^7.1.0",
