--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "test:e2e": "start-server-and-test preview http://127.0.0.1:5050/ 'cypress open'",
     "test:e2e:ci": "start-server-and-test preview http://127.0.0.1:5050/ 'cypress run'",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "prettier": "prettier --config .prettierrc.js --write --check ."
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -28,10 +29,12 @@
     "@vue/tsconfig": "^0.1.3",
     "cypress": "^9.5.4",
     "eslint": "^8.5.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^8.2.0",
     "jsdom": "^19.0.0",
     "node-sass": "^7.0.1",
+    "prettier": "^2.6.2",
     "sass-loader": "^12.6.0",
     "start-server-and-test": "^1.14.0",
     "typescript": "~4.6.3",
