--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -1,10 +1,16 @@
-name: Node.js CI BACKEND
+name: Server CI
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+    paths:
+      - 'server/**'
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
+    paths:
+      - 'server/**'
 
 jobs:
   build:
