Julian - Reduced amount of redundant server actions

--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -20,8 +20,8 @@ jobs:
         working-directory: ./server
     strategy:
       matrix:
-        node-version: [14.x, 16.x ]
-        mongodb-version: [4.2, 4.0]
+        node-version: [16.x]
+        mongodb-version: [4.2]
 
     steps:
     - name: Git checkout
