--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "connect-mongo": "^4.6.0",
     "connect-mongodb-session": "^3.1.1",
     "connect-redis": "^6.1.3",
+    "cors": "^2.8.5",
     "email-validator": "^2.0.4",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
@@ -37,6 +38,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/connect-mongodb-session": "^2.4.3",
     "@types/connect-redis": "^0.0.18",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/ioredis": "^4.28.10",
