--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,6 @@ services:
       MONGO_PW: password
       MONGO_HOST: mongo-db
       SECRET: allmende_super_secret
-      NODE_ENV: production
       REDIS_HOST: redis-db
     depends_on:
       - mongo-db
@@ -25,6 +24,8 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: password
+    volumes:
+      - allmende:/data/db
   redis-db:
     image: redis
     restart: always
