--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "redis": "^4.0.6",
+    "sharp": "^0.30.4",
     "uuid": "^8.3.2",
     "winston": "^3.7.2"
   },
@@ -47,6 +48,7 @@
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
     "@types/redis": "^4.0.11",
+    "@types/sharp": "^0.30.2",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
