--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "test": "dotenv -- jest",
     "start": "dotenv -- node dist/index.js",
     "dev": "dotenv -- nodemon",
-    "prettier": "prettier --write .",
+    "lint": "eslint --ext .js,.ts -c .eslintrc.js src/",
+    "prettier": "prettier --config .prettierrc.js --write --check .",
     "prettier-watch": "onchange \"**/*\" -- prettier --write --ignore-unknown {{changed}}",
     "build": "tsc"
   },
