--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "check-password-strength": "^2.0.5",
     "connect-mongo": "^4.6.0",
     "connect-mongodb-session": "^3.1.1",
     "connect-redis": "^6.1.3",
