--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
     "connect-mongodb-session": "^3.1.1",
@@ -24,12 +25,14 @@
     "email-validator": "^2.0.4",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
+    "form-data": "^4.0.0",
     "http-status-codes": "^2.2.0",
     "ioredis": "^5.0.4",
     "jshint": "^2.13.4",
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "node-fetch": "^3.2.4",
     "redis": "^4.0.6",
     "sharp": "^0.30.4",
     "uuid": "^8.3.2",
