--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "exifr": "^7.1.3",
     "nanoid": "^3.3.4",
     "pinia": "^2.0.13",
     "sass": "^1.51.0",
