--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "node-2fa": "^2.0.3",
     "node-fetch": "^3.2.4",
     "redis": "^4.0.6",
     "sharp": "^0.30.4",
