--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -8,13 +8,13 @@ services:
       - allmende:/var/src/allmende-server/logs
       - allmende:/var/src/allmende-serer/uploads
     environment:
-      MONGO_USER: ${MONGO_USER}
-      MONGO_PW: ${MONGO_PW}
-      MONGO_HOST: ${MONGO_HOST}
-      SECRET: ${SECRET}
-      REDIS_HOST: ${REDIS_HOST}
-      NODE_ENV: ${NODE_ENV}
-      PORT: ${PORT}
+      MONGO_USER: admin
+      MONGO_PW: password
+      MONGO_HOST: mongo-db
+      SECRET: allmende_secret
+      REDIS_HOST: redis_db
+      NODE_ENV: development
+      PORT: 3000
     depends_on:
       - mongo-db
       - redis-db
@@ -24,8 +24,8 @@ services:
     ports:
       - "27017:27017"
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PW}
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password
     volumes:
       - allmende:/data/db
   redis-db:
