--- a/server/.env.local
+++ b/server/.env.local
@@ -2,6 +2,8 @@
 MONGO_USER=admin
 MONGO_PW=password
 MONGO_HOST=localhost
+PORT=3000
+NODE_ENV=development
 
 ## Redis credentials
 REDIS_HOST=localhost
