--- a/server/package.json
+++ b/server/package.json
@@ -1,73 +1,73 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "dotenv -- jest",
-    "start": "dotenv -- node dist/index.js",
-    "dev": "dotenv -- nodemon",
-    "lint": "eslint --ext .js,.ts -c .eslintrc.js src/",
-    "prettier": "prettier --config .prettierrc.js --write --check .",
-    "prettier-watch": "onchange \"**/*\" -- prettier --write --ignore-unknown {{changed}}",
-    "build": "tsc"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.27.2",
-    "bcrypt": "^5.0.1",
-    "check-password-strength": "^2.0.5",
-    "connect-mongo": "^4.6.0",
-    "connect-mongodb-session": "^3.1.1",
-    "connect-redis": "^6.1.3",
-    "cors": "^2.8.5",
-    "email-validator": "^2.0.4",
-    "express": "^4.17.3",
-    "express-session": "^1.17.2",
-    "form-data": "^4.0.0",
-    "http-status-codes": "^2.2.0",
-    "ioredis": "^5.0.4",
-    "jshint": "^2.13.4",
-    "mongoose": "^6.3.1",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.4",
-    "node-fetch": "^3.2.4",
-    "redis": "^4.0.6",
-    "sharp": "^0.30.4",
-    "uuid": "^8.3.2",
-    "winston": "^3.7.2"
-  },
-  "devDependencies": {
-    "@faker-js/faker": "^6.3.1",
-    "@types/bcrypt": "^5.0.0",
-    "@types/connect-mongodb-session": "^2.4.3",
-    "@types/connect-redis": "^0.0.18",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/express-session": "^1.17.4",
-    "@types/ioredis": "^4.28.10",
-    "@types/jest": "^27.4.1",
-    "@types/mongoose": "^5.11.97",
-    "@types/morgan": "^1.9.3",
-    "@types/multer": "^1.4.7",
-    "@types/redis": "^4.0.11",
-    "@types/sharp": "^0.30.2",
-    "@types/supertest": "^2.0.12",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "dotenv-cli": "^5.1.0",
-    "eslint": "^8.13.0",
-    "eslint-config-prettier": "^8.5.0",
-    "jest": "^27.5.1",
-    "nodemon": "^2.0.15",
-    "onchange": "^7.1.0",
-    "prettier": "^2.6.2",
-    "supertest": "^6.2.2",
-    "ts-jest": "^27.1.4",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
-  }
+    "name": "server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "dotenv -- jest",
+        "start": "dotenv -e ./.env -- node dist/index.js",
+        "dev": "dotenv -e ./.env.local -- nodemon",
+        "lint": "eslint --ext .js,.ts -c .eslintrc.js src/",
+        "prettier": "prettier --config .prettierrc.js --write --check .",
+        "prettier-watch": "onchange \"**/*\" -- prettier --write --ignore-unknown {{changed}}",
+        "build": "tsc"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^0.27.2",
+        "bcrypt": "^5.0.1",
+        "check-password-strength": "^2.0.5",
+        "connect-mongo": "^4.6.0",
+        "connect-mongodb-session": "^3.1.1",
+        "connect-redis": "^6.1.3",
+        "cors": "^2.8.5",
+        "email-validator": "^2.0.4",
+        "express": "^4.17.3",
+        "express-session": "^1.17.2",
+        "form-data": "^4.0.0",
+        "http-status-codes": "^2.2.0",
+        "ioredis": "^5.0.4",
+        "jshint": "^2.13.4",
+        "mongoose": "^6.3.1",
+        "morgan": "^1.10.0",
+        "multer": "^1.4.4",
+        "node-fetch": "^3.2.4",
+        "redis": "^4.0.6",
+        "sharp": "^0.30.4",
+        "uuid": "^8.3.2",
+        "winston": "^3.7.2"
+    },
+    "devDependencies": {
+        "@faker-js/faker": "^6.3.1",
+        "@types/bcrypt": "^5.0.0",
+        "@types/connect-mongodb-session": "^2.4.3",
+        "@types/connect-redis": "^0.0.18",
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.13",
+        "@types/express-session": "^1.17.4",
+        "@types/ioredis": "^4.28.10",
+        "@types/jest": "^27.4.1",
+        "@types/mongoose": "^5.11.97",
+        "@types/morgan": "^1.9.3",
+        "@types/multer": "^1.4.7",
+        "@types/redis": "^4.0.11",
+        "@types/sharp": "^0.30.2",
+        "@types/supertest": "^2.0.12",
+        "@types/uuid": "^8.3.4",
+        "@typescript-eslint/eslint-plugin": "^5.20.0",
+        "@typescript-eslint/parser": "^5.20.0",
+        "dotenv-cli": "^5.1.0",
+        "eslint": "^8.13.0",
+        "eslint-config-prettier": "^8.5.0",
+        "jest": "^27.5.1",
+        "nodemon": "^2.0.15",
+        "onchange": "^7.1.0",
+        "prettier": "^2.6.2",
+        "supertest": "^6.2.2",
+        "ts-jest": "^27.1.4",
+        "ts-node": "^10.7.0",
+        "typescript": "^4.6.3"
+    }
 }
