--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,11 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "debounce": "^1.2.1",
     "exifr": "^7.1.3",
+    "focus-trap": "^6.9.4",
+    "focus-trap-vue": "^3.3.0",
+    "leaflet": "^1.8.0",
     "nanoid": "^3.3.4",
     "pinia": "^2.0.13",
     "sass": "^1.51.0",
@@ -23,7 +27,9 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
+    "@types/debounce": "^1.2.1",
     "@types/jsdom": "^16.2.14",
+    "@types/leaflet": "^1.7.11",
     "@types/node": "^16.11.27",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/eslint-config-typescript": "^10.0.0",
