Added missing env variable

--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "dotenv -- jest",
         "start": "dotenv -e ./.env -- node dist/index.js",
-        "dev": "dotenv -e ./.env.local -- nodemon",
+        "dev": "dotenv -e ./.env -- nodemon",
         "lint": "eslint --ext .js,.ts -c .eslintrc.js src/",
         "prettier": "prettier --config .prettierrc.js --write --check .",
         "prettier-watch": "onchange \"**/*\" -- prettier --write --ignore-unknown {{changed}}",
