--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
         "connect-mongodb-session": "^3.1.1",
         "connect-redis": "^6.1.3",
         "cors": "^2.8.5",
+        "csv-parser": "^3.0.0",
         "email-validator": "^2.0.4",
         "express": "^4.17.3",
         "express-session": "^1.17.2",
