--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,8 @@
         "morgan": "^1.10.0",
         "multer": "^1.4.4",
         "node-fetch": "^3.2.4",
+        "p-limit": "^3.1.0",
+        "p-queue": "^7.2.0",
         "redis": "^4.0.6",
         "sharp": "^0.30.4",
         "uuid": "^8.3.2",
