--- a/ml/Dockerfile
+++ b/ml/Dockerfile
@@ -7,9 +7,10 @@ WORKDIR /var/src/allmende-ml
 COPY . .
 RUN python3 -m venv /var/src/allmende-ml/venv
 ENV PATH="/var/src/allmende-ml/venv:$PATH"
+ENV FLASK_APP=api
 RUN pip install -Ur requirements.txt
 
 EXPOSE 5000
-CMD ["flask", "run"]
+CMD ["python3", "-m", "flask", "run", "--host=0.0.0.0"]
 
 
