--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,4 @@
+
 upstream loadbalancer {
   server allmende-server:3000;
 }
@@ -8,4 +9,8 @@ server {
   location ^~ /api {
     proxy_pass http://loadbalancer;
   }
+  location  / {
+    proxy_pass http://allmende-client:5050;
+  }
 }
+
