--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: "3.9" 
 
 services:
+ 
+
   allmende-ml:
     build: ./ml
     ports:
@@ -50,5 +52,10 @@ services:
       - mongo-db
       - redis-db
       - allmende-ml
+  allmende-client: 
+    build: ./client
+    ports:
+      - "5050:5050"
+    stdin_open: true
 volumes:
   allmende:
