--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "5000:5000"
     environment:
       FLASK_APP: api
+    volumes:
+     - ./ml/saved_model:/var/src/allmende-ml/saved_model
   mongo-db:
     image: mongo
     restart: always
@@ -51,6 +53,8 @@ services:
       - redis-db
       - allmende-ml
   allmende-client: 
+    depends_on:
+     - allmende-server
     build: ./client
     ports:
       - "5050:5050"
