--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -33,5 +33,16 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: ./server/package-lock.json
-
     - run: npm install
+    
+    - name: Deploy to server
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        script: |
+          cd allmende
+          git pull origin main
+          docker-compose down
+          docker-compose up -d --build
