--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@ upstream loadbalancer {
 
 server {
   listen 80;
-  server_name allmendeapp.xyz www.allmendeapp.xyz;
+  server_name localhost;
   location ^~ /api {
     proxy_pass http://loadbalancer;
   }
