--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -42,3 +42,4 @@ jobs:
           git pull origin main
           docker-compose down
           docker-compose up -d --build
+          docker image prune -f
