--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,6 +9,9 @@ server {
   location ^~ /api {
     proxy_pass http://loadbalancer;
   }
+  location /portainer {
+    proxy_pass http://allmende-portainer:9000;
+  }
   location  / {
     proxy_pass http://allmende-client:5050;
   }
