--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,13 +28,12 @@ services:
     ports:
       - 6379:6379
   nginx:
-    image: jwilder/nginx-proxy
+    build: ./nginx
     ports:
       - "80:80"
     depends_on:
       - allmende-server
     volumes:
-      - "/var/run/docker.sock:/tmp/docker.sock:ro"
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
   allmende-server: 
     build: ./server
