--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -47,3 +47,4 @@ jobs:
           docker-compose down
           docker-compose up -d --build
           docker image prune -f
+          docker compose restart
