--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -45,6 +45,6 @@ jobs:
           cd allmende
           git pull origin main
           docker-compose down
-          docker-compose up -d --build
+          docker-compose -f ./docker-compose.production.yml up -d --build
           docker image prune -f
  
