--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -9,7 +9,7 @@ on:
     branches:
       - main
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -23,17 +23,17 @@ jobs:
     - name: Git checkout
       uses: actions/checkout@v2
 
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js ${{ matrix.node-version }} and run tests
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: ./server/package-lock.json
-    - run: npm install
+    - run: npm run test
     
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: test
     steps:  
     - name: Deploy to server
       uses: appleboy/ssh-action@master
