--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "dotenv -- jest",
+        "test": "NODE_ENV=test dotenv -- jest --detectOpenHandles",
         "start": "dotenv -e ./.env -- node dist/index.js",
         "dev": "dotenv -e ./.env -- nodemon",
         "lint": "eslint --ext .js,.ts -c .eslintrc.js src/",
@@ -51,7 +51,7 @@
         "@types/express": "^4.17.13",
         "@types/express-session": "^1.17.4",
         "@types/ioredis": "^4.28.10",
-        "@types/jest": "^27.4.1",
+        "@types/jest": "^27.5.2",
         "@types/mongoose": "^5.11.97",
         "@types/morgan": "^1.9.3",
         "@types/multer": "^1.4.7",
