--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -2,13 +2,32 @@ version: "3.9"
 
 services:
   allmende-ml:
+    container_name: ml
     build: ./ml
     restart: always
     environment:
       FLASK_APP: api
     volumes:
      - ./ml/saved_model:/var/src/allmende-ml/saved_model
+  mongo-express:
+    image: mongo-express:0.54.0 # latest image
+    container_name: mongo-express
+    restart: unless-stopped
+    ports:
+      - 8081:8081
+    volumes:
+      - allmende:/data/dbui
+    depends_on:
+      - mongo-db
+      - allmende-server
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_USER}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_PW}
+      ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_BASICAUTH_USERNAME: ${MONGO_USER}
+      ME_CONFIG_BASICAUTH_PASSWORD: ${MONGO_PW}
   mongo-db:
+    container_name: mongo
     image: mongo
     restart: always
     environment:
@@ -16,12 +35,15 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PW}
     volumes:
       - allmende:/data/db
+  
   redis-db:
+    container_name: redis
     image: redis
     restart: always
     volumes:
       - allmende:/data
   nginx:
+    container_name: nginx
     build: ./nginx
     ports:
       - "80:80"
@@ -30,6 +52,7 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
   allmende-server: 
+    container_name: server
     build: ./server
     restart: always
     volumes:
@@ -48,13 +71,15 @@ services:
       - mongo-db
       - redis-db
       - allmende-ml
-  allmende-client: 
+  allmende-client:
+    container_name: client
     depends_on:
      - allmende-server
     build: ./client
     stdin_open: true
     restart: always
   allmende-portainer:
+    container_name: portainer
     image: portainer/portainer-ce:latest
     command: -H unix:///var/run/docker.sock
     restart: always
