--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.9"
 
 services:
   allmende-ml:
+    container_name: ml
     build: ./ml
     restart: always
     environment:
@@ -23,7 +24,7 @@ services:
       - 27017:27017
   
   mongo-express:
-    image: mongo-express:latest # latest image
+    image: mongo-express:0.54.0 # latest image
     container_name: mongo-express
     restart: unless-stopped
     ports:
@@ -37,7 +38,10 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_USER}
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_PW}
       ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_BASICAUTH_USERNAME: ${MONGO_USER}
+      ME_CONFIG_BASICAUTH_PASSWORD: ${MONGO_PW}
   redis-db:
+    container_name: redis
     image: redis
     restart: always
     volumes:
@@ -45,6 +49,7 @@ services:
     ports:
       - 6379:6379
   nginx:
+    container_name: nginx
     build: ./nginx
     ports:
       - "80:80"
@@ -53,6 +58,7 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
   allmende-server: 
+    container_name: server
     build: ./server
     restart: always
     volumes:
@@ -74,12 +80,14 @@ services:
     ports:
       - 3000:3000
   allmende-client: 
+    container_name: client
     depends_on:
      - allmende-server
     build: ./client
     stdin_open: true
     restart: always
   allmende-portainer:
+    container_name: portainer
     image: portainer/portainer-ce:latest
     command: -H unix:///var/run/docker.sock
     restart: always
