--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,3 +18,10 @@ server {
   }
 }
 
+server {
+   server_name db.allmendeapp.xyz;
+    location /mongoexpress {
+      proxy_pass      http://allmende-mongo:8081;
+        }
+}
+
