--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,6 +19,7 @@ server {
 }
 
 server {
+  listen 80;
    server_name db.allmendeapp.xyz;
     location /mongoexpress {
       proxy_pass      http://allmende-mongo:8081;
