--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,4 +18,13 @@ server {
   }
 }
 
+server {
+    listen 80;
+    server_name db.allmendeapp.xyz;
+    location / {
+        proxy_pass http://mongo-express:8081;
+        proxy_redirect off;
+    }
+}
+
 
