--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,4 +27,12 @@ server {
     }
 }
 
+server {
+    listen 80;
+    server_name portainer.allmendeapp.xyz;
+    location / {
+        proxy_pass http://mongo-express:8081;
+        proxy_redirect off;
+    }
+}
 
