nginx allmende.xyz

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -36,3 +36,20 @@ server {
     }
 }
 
+server {
+    listen 80;
+    server_name db.allmende.xyz;
+    location / {
+        proxy_pass http://mongo-express:8081;
+        proxy_redirect off;
+    }
+}
+
+server {
+    listen 80;
+    server_name portainer.allmende.xyz;
+    location / {
+        proxy_pass http://mongo-express:8081;
+        proxy_redirect off;
+    }
+}
